# iterm2mintty-rs

./: Cargo.toml  README.md
src/: alacritty.rs  iterm2.rs  main.rs  mintty.rs
