[package]
name = "iterm2mintty"
version = "0.2.0"
authors = ["bobcats"]
description = "Tool that converts iterm2 themes to minttyrc themes"
homepage = "https://github.com/bobcats/iterm2mintty-rs"
repository = "https://github.com/bobcats/iterm2mintty-rs"
readme = "README.md"
license = "MIT"

[dependencies]
clap = "2.29.2"
plist = "0.2.4"
serde = "1.0"
serde_derive = "1.0"
serde_ini = "0.1.3"
serde_yaml = "0.8.8"
